--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Taiyr Sabyrzhan personal site</title>
+  <title>Taiyr Sabyrzhan CV</title>
 </head>
 
 <body>
