--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Taiyr Sabyrzhan CV</title>
+  
+<style>
+  body {background-color: blue;}
+  </style>
+  
 </head>
 
 <body>
