--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Taiyr Sabyrzhan CV</title>
   
 <style>
-  body {background-color: blue;}
+  body {background-color: #FEE0C0;}
  </style>
   
 </head>
